added more tests, upgrade services logic, added exception handler